# aiwomen_battle

./: .coverage  .gitignore  CLAUDE.md  README.md  TASKS.md  VOICEOVER_README.md  check_runway_usage.py  config.json  editor_config.json  elevenlabs_test.py  experiment.py  export_code.py  process_videos_hardcuts.sh  process_videos_smooth.sh  pyproject.toml  requirements.txt  run_with_params.py  run_workflow.py  setup.py  sync.py  sync_master.py  sync_master2.py  sync_smooth.py  test_audio_composition.py  test_complete_workflow.py  test_complete_workflow_merged.py  test_video_editor.py  test_voiceover.py  test_voiceover_only.py  workflow_manager.py
.cursor/rules/: mycurserrulez.mdc
Generation/: __init__.py  animation_prompts.py  base_image_prompts.py  config.json  countries.py  prompts.py  render.py  requirements.txt  video_editor.py  voiceover.py
code_exports/: code_export.txt
config/: config.example.json
orchestrator/: README.md  main_workflow.py
src/watw/: __init__.py  __main__.py  cli.py  mock_clients.py
src/watw/api/: README.md  __init__.py  config.py  examples.py  exceptions.py
src/watw/audio/: __init__.py
src/watw/config/: __init__.py  config.py
src/watw/core/: __init__.py  audio_composition.py  render.py  (+2 more)
stubs/matplotlib/: pyplot.pyi
tests/: test_audio_composition.py  test_complete_workflow.py  test_complete_workflow_merged.py  test_config.py  test_mock_api.py  test_utils.py  test_video_editor.py  test_voiceover.py  test_voiceover_only.py
tests/api/: test_elevenlabs_integration.py
tests/mocks/: mock_api_clients.py  mock_api_responses.py
(+52 files in other folders)
